--- a/public/icons/icons.css
+++ b/public/icons/icons.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'icons';
-  src: url('../font/icons.eot?43379042');
-  src: url('../font/icons.eot?43379042#iefix') format('embedded-opentype'),
-       url('../font/icons.woff2?43379042') format('woff2'),
-       url('../font/icons.woff?43379042') format('woff'),
-       url('../font/icons.ttf?43379042') format('truetype'),
-       url('../font/icons.svg?43379042#icons') format('svg');
+  src: url('../font/icons.eot?2264180');
+  src: url('../font/icons.eot?2264180#iefix') format('embedded-opentype'),
+       url('../font/icons.woff2?2264180') format('woff2'),
+       url('../font/icons.woff?2264180') format('woff'),
+       url('../font/icons.ttf?2264180') format('truetype'),
+       url('../font/icons.svg?2264180#icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'icons';
-    src: url('../font/icons.svg?43379042#icons') format('svg');
+    src: url('../font/icons.svg?2264180#icons') format('svg');
   }
 }
 */
@@ -66,5 +66,7 @@
 .icon-off:before { content: '\e808'; } /* '' */
 .icon-signal:before { content: '\e809'; } /* '' */
 .icon-flight:before { content: '\e80a'; } /* '' */
+.icon-clock:before { content: '\e80b'; } /* '' */
 .icon-play-circled:before { content: '\e80c'; } /* '' */
 .icon-pause-circled:before { content: '\e810'; } /* '' */
+.icon-microchip:before { content: '\f2db'; } /* '' */
