--- a/views/dash/dash.styl
+++ b/views/dash/dash.styl
@@ -1,3 +1,9 @@
 dash
   display flex
-  
+  flex-direction column
+  .stats
+    display flex
+    flex-direction row
+    flex-wrap nowrap
+    align-items center
+    justify-content space-around
