--- a/views/index.styl
+++ b/views/index.styl
@@ -10,7 +10,7 @@
   user-select none !important
   touch-action none !important
   -webkit-tap-highlight-color rgba(255, 255, 255, 0) !important
-
+  cursor none
 body, html
   font-family 'Noto Sans', Helvetica, Arial, sans-serif
   color $main-font-color
@@ -20,6 +20,7 @@ body, html
   margin 0
   padding 0
   overflow hidden
+  text-transform uppercase
 
 html
   font-size $main-size
